syntax = "proto3";

option csharp_namespace = "Torrent";

import "google/protobuf/empty.proto";
package SignUp;

service SignUpService {
  rpc SignUp (SignUpMessage) returns (SignUpReply) {}
  rpc SignUpOneFile (SignUpMessage) returns (google.protobuf.Empty) {}
}

message SignUpMessage {
  repeated SentFile files = 1;
  int32 clientPort = 2;
}

message SignUpReply {
  repeated TFile torrentFiles = 1;
}

message SentFile {
  string fileName = 1;
  string fileHash = 2;
  int64 fileSize = 3;
}

message TFile {
	string fileName = 1;
	string fileHash = 2;
	int64 fileSize = 3;
	repeated string clientIPs = 4;
	repeated int32 clientPorts = 5;
}